# gn-example

./: README.md  pyproject.toml
gn_example/: linear.py  so3.py
