[tool.poetry]
name = "gn-example"
version = "0.1.0"
description = ""
authors = ["regen"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
numpy = "^1.20.2"
scipy = "^1.6.3"

[tool.poetry.dev-dependencies]
pysen = {version = "0.9.1", extras = ["lint"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.9"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py37"

[[tool.pysen.lint.mypy_targets]]
paths = ["gn_example"]
